Added css for hero, logo, button, features

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <ul class="list team__list">
             <li>
               <div class="employee__card">
-                <img width="260" src="image/team_1.jpg" alt="Ігор Дем'яненко" />
+                <img class = "employee__image" src="image/team_1.jpg" alt="Ігор Дем'яненко" />
                 <h3 class="employee__name">Ігор Дем'яненко</h3>
                 <p class="employee__description">Product Designer</p>
                 <div class="employee__platforms">
@@ -259,7 +259,7 @@
             </li>
             <li>
               <div class="employee__card">
-                <img width="260" src="image/team_2.jpg" alt="Ольга Рєпіна" />
+                <img class = "employee__image" src="image/team_2.jpg" alt="Ольга Рєпіна" />
                 <h3 class="employee__name">Ольга Рєпіна</h3>
                 <p class="employee__description">Frontend Developer</p>
                 <div class="employee__platforms">
@@ -292,7 +292,7 @@
             </li>
             <li>
               <div class="employee__card">
-                <img width="260" src="image/team_3.jpg" alt="Микола Тарасов" />
+                <img class = "employee__image" src="image/team_3.jpg" alt="Микола Тарасов" />
                 <h3 class="employee__name">Микола Тарасов</h3>
                 <p class="employee__description">Marketing</p>
                 <div class="employee__platforms">
@@ -325,7 +325,7 @@
             </li>
             <li>
               <div class="employee__card">
-                <img width="260" src="image/team_4.jpg" alt="Михайло Єрмаков" />
+                <img class = "employee__image" src="image/team_4.jpg" alt="Михайло Єрмаков" />
                 <h3 class="employee__name">Михайло Єрмаков</h3>
                 <p class="employee__description">UI Designer</p>
                 <div class="employee__platforms">
