--- a/index.html
+++ b/index.html
@@ -413,21 +413,21 @@
     <footer>
       <div class="container footer__container">
         <div class="footer__address">
-          <a class="logo footer__logo" href="/"
+          <a class="logo footer__logo address__item" href="/"
             ><span class="logo--blue">Web</span>Studio</a
           >
           <address>
             <ul>
-              <li>
+              <li class = "address__item">
                 <p class="footer__post">м. Київ, пр-т Лесі Українки, 26</p>
               </li>
 
-              <li>
+              <li class = "address__item">
                 <a class="contact footer__contact" href="info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class = "address__item">
                 <a class="contact footer__contact" href="+380961111111"
                   >+38 096 111 11 11</a
                 >
@@ -435,8 +435,9 @@
             </ul>
           </address>
         </div>
-        <div class="footer__platforms">
-          <h3 class="platforms__title">Приєднуйтесь</h3>
+       <h3 class="platforms__title address__item">Приєднуйтесь</h3>
+         <div class="footer__platforms">
+        
           <a class="platforms__link--footer"
             ><svg class="platforms__icon--footer" height="20" width="20">
               <use href="./image/symbol-defs.svg#icon-instagram"></use>
@@ -462,7 +463,7 @@
             </svg>
           </a>
         </div>
-        <form class="signup">
+        <form class="signup address__item">
           <label for="signup__mail">
             <p class="signup__txt">Підпишіться на розсилку</p>
           </label>
